# wine-quality-statistical-analysis

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: projeto.ipynb
src/: data_preparation.py
